--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-::: {.floatting}
+::: {.floating}
 
 ```{r echo=FALSE, out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics("man/figures/leninsticker_tiny.png")
