--- a/README.Rmd
+++ b/README.Rmd
@@ -11,20 +11,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-::: {.floating}
-
-```{r echo=FALSE, out.extra='style="float:right; padding:10px"'}
-knitr::include_graphics("man/figures/leninsticker_tiny.png")
-```
-
-# leninature
+# leninature <img src='man/figures/leninsticker_tiny.png' align="right"/>
 
 <!-- badges: start -->
 <!-- badges: end -->
 
 The goal of this package is to make it easy to query and analyse the
 works of Lenin. 
-:::
+
 # Getting started
 
 ## The Easy Way
